# VocalChain-VST

./: .gitignore  CMakeLists.txt  README.md  installer.iss
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Compressor.cpp  Compressor.h  DeEsser.cpp  DeEsser.h  DelayLine.cpp  DelayLine.h  Equalizer.cpp  Equalizer.h  NoiseGate.cpp  NoiseGate.h  PitchCorrector.cpp  PitchCorrector.h  Reverb.cpp  Reverb.h  Saturation.cpp  Saturation.h
Source/Presets/: PresetManager.cpp  PresetManager.h
